// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatientDetailsReport can switch pregnancies: after filter pregnancies 1`] = `"ReportDateReporterMessage"`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 1`] = `"ReportDateReporterMessage"`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 2`] = `
"Birth Report2021-06-11Faith MutuaChild DOB = 13-04-2021 
Child Gender = NAM 
Delivery Location =  
Newborn Symptoms = Jaundice (psysiological) 
Child Weight = 2.8 
Child Length = 48 
Child Risk = no_risk 
Breastfeeding = No breastfeeding within 1 hour
Mother Symptoms = Light vaginal bleeding"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 3`] = `
"Delivery Planning2021-06-11Faith MutuaPlanned Delivery Location = At home 
Current Symptoms = Vomiting"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 4`] = `
"Social Determinants2021-06-11Faith MutuaPlanned Delivery Location = At home
Household = Is a poor household
Ethnicity = TAY
Toilet = Has toilet
Handwashing = No Handwashing facilities with soap"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 5`] = `
"Home ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80 
Weight = 70 
Current Symptoms = Stomachache,Premature Contraction 
Supplements = Micronutrients Supplement: Yes "
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 6`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Premature Contraction
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 7`] = `
"Home ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80 
Weight = 70 
Current Symptoms = Stomachache,Vomiting 
Supplements = Micronutrients Supplement: Yes "
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 8`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Coughing
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 9`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Coughing
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 10`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Coughing
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 11`] = `
"Pregnancy Registration2021-06-11Faith MutuaEDD = 27-06-2021
Gravidity = 3
Parity = 2
Weight = 68 
Height = 159
BMI = 
Previous Gynaecology History = Previous C-section
Current Symptoms = Coughing"
`;

exports[`PatientDetailsReport can switch pregnancies: initial current pregnancies 12`] = `
"Pregnancy Detection2021-06-11Faith MutuaName = MTANA   GEORGIA
Phone Number = 0743654321 
Health Insurance = 5864327890"
`;

exports[`PatientDetailsReport can switch pregnancies: select snapshot 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="1616424933497"
    value="1616424933497"
  >
    Current pregnancy
  </option>
  <option
    key="1616424933423"
    value="1616424933423"
  >
    Pregnancy 3
  </option>
  <option
    key="1616424933422"
    value="1616424933422"
  >
    Pregnancy 2
  </option>
  <option
    key="1616424933421"
    value="1616424933421"
  >
    Pregnancy 1
  </option>
</select>
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 1`] = `"ReportDateReporterMessage"`;

exports[`PatientDetailsReport works okay: initial current pregnancies 2`] = `
"Birth Report2021-06-11Faith MutuaChild DOB = 13-04-2021 
Child Gender = NAM 
Delivery Location =  
Newborn Symptoms = Jaundice (psysiological) 
Child Weight = 2.8 
Child Length = 48 
Child Risk = no_risk 
Breastfeeding = No breastfeeding within 1 hour
Mother Symptoms = Light vaginal bleeding"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 3`] = `
"Delivery Planning2021-06-11Faith MutuaPlanned Delivery Location = At home 
Current Symptoms = Vomiting"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 4`] = `
"Social Determinants2021-06-11Faith MutuaPlanned Delivery Location = At home
Household = Is a poor household
Ethnicity = TAY
Toilet = Has toilet
Handwashing = No Handwashing facilities with soap"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 5`] = `
"Home ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80 
Weight = 70 
Current Symptoms = Stomachache,Premature Contraction 
Supplements = Micronutrients Supplement: Yes "
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 6`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Premature Contraction
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 7`] = `
"Home ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80 
Weight = 70 
Current Symptoms = Stomachache,Vomiting 
Supplements = Micronutrients Supplement: Yes "
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 8`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Coughing
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 9`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Coughing
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 10`] = `
"ANC Visit2021-06-11Faith MutuaBlood Pressure = 120/80
Weight = 69
Current Symptoms = Coughing
Supplements = Micronutrients Supplement: Yes"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 11`] = `
"Pregnancy Registration2021-06-11Faith MutuaEDD = 27-06-2021
Gravidity = 3
Parity = 2
Weight = 68 
Height = 159
BMI = 
Previous Gynaecology History = Previous C-section
Current Symptoms = Coughing"
`;

exports[`PatientDetailsReport works okay: initial current pregnancies 12`] = `
"Pregnancy Detection2021-06-11Faith MutuaName = MTANA   GEORGIA
Phone Number = 0743654321 
Health Insurance = 5864327890"
`;
